--- a/InsuranceServiceApp/Views/Shared/_Layout.cshtml
+++ b/InsuranceServiceApp/Views/Shared/_Layout.cshtml
@@ -240,6 +240,11 @@
     <script src="~/app-assets/vendors/js/charts/raphael-min.js" type="text/javascript"></script>
     <script src="~/app-assets/vendors/js/charts/morris.min.js" type="text/javascript"></script>
     <script src="~/app-assets/vendors/js/timeline/horizontal-timeline.js" type="text/javascript"></script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js"></script>
+
     <!-- END PAGE VENDOR JS-->
 
     <!-- BEGIN MODERN JS-->
