--- a/InsuranceServiceApp/Views/_ViewImports.cshtml
+++ b/InsuranceServiceApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using InsuranceServiceApp
 @using InsuranceServiceApp.Models
+@using InsuranceServiceApp.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
